# Decision-Autopsy

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: errors.py  settings.py
app/prompts/: companion.py  listener.py  pattern_reader.py  questioner.py  surgeon.py
app/schemas/: agent.py  context.py
app/services/: agents.py  exceptions.py  json_utils.py  llm.py
frontend/src/: App.jsx  config.js
frontend/src/components/: MessageList.jsx  QuestionCard.jsx
frontend/src/services/: apiClient.js
frontend/src/state/: context.js
frontend/styles/: main.css
tests/: test_agent_service.py  test_api.py  test_schemas.py
